# Plexo

./: .gitignore  AUTHORS  LICENSE  README.md  package-lock.json  package.json  run.sh  vitest.config.ts
backend-prover-reference/: generator.py
circuits/: balance_commitment.circom  confidential_transfer.circom  confidential_withdraw.circom  credentials.circom  private_transfer.circom  proof_of_reserves.circom  range_proof.circom
client-lib/: client.ts  confidential-commit.ts  confidential-note.ts  confidential-pool.ts  confidential-receive.ts  preflight.ts  sodium.ts  stealth.ts  verify.ts
contracts/groth16-verifier/: Cargo.toml
contracts/groth16-verifier/data/: proof.json
contracts/groth16-verifier/src/: lib.rs  test.rs
contracts/zk-confidential-transfer/: Cargo.toml
contracts/zk-confidential-transfer/data/: c0_proof.json  c0_public.json  proof.json  public.json  withdraw_proof.json  withdraw_public.json  withdraw_zero_proof.json  withdraw_zero_public.json
contracts/zk-confidential-transfer/src/: lib.rs  test.rs
contracts/zk-confidential-transfer/test_snapshots/test/: confidential_transfer_absent_recipient_c0_reaches_pairing.1.json  confidential_transfer_before_initialize_rejected.1.json  confidential_transfer_double_spend_same_sender_old_rejected.1.json  confidential_transfer_rejects_all_bad_arities.1.json  confidential_transfer_rejects_bad_arity.1.json  confidential_transfer_rejects_stale_recipient_old.1.json  confidential_transfer_rejects_tampered_proof.1.json  confidential_transfer_rejects_unregistered_sender.1.json  deposit_registers_commitment_and_custodies_funds.1.json  deposit_rejects_double_seed.1.json  deposit_zero_amount_registers_commitment.1.json  double_withdraw_rejected_and_financially_inert.1.json  interleaved_transfers_two_pairs_isolated.1.json  multi_step_chain_deposit_transfer_transfer_withdraw.1.json  pool_balance_equals_deposits_minus_withdrawals.1.json  read_only_accessors_initial_state.2.json  replay_old_proof_rejected_mid_chain.1.json  valid_c0_fold_in_creates_recipient_slot.1.json  valid_confidential_transfer_updates_both_commitments.1.json  withdraw_before_deposit_then_after_deposit_succeeds.1.json  withdraw_forged_amount_signal_rejected.1.json  withdraw_pays_out_and_burns_commitment.1.json  withdraw_rejects_bad_arity.1.json  withdraw_rejects_commitment_mismatch.1.json  withdraw_without_deposit_rejected.1.json  withdraw_wrong_amount_rejected.1.json  withdraw_zero_amount_still_burns_commitment.1.json
contracts/zk-verified-payment/: Cargo.toml
contracts/zk-verified-payment/data/: verification_key.json
contracts/zk-verified-payment/src/: lib.rs  test.rs
contracts/zk-verified-payment/test_snapshots/test/: rejects_replayed_nullifier.1.json  rejects_tampered_proof.1.json  rejects_wrong_pub_signals_arity.1.json  verified_payment_transfers_on_valid_proof.1.json
demo/: README.md  run.sh  serve.mjs
demo/web/: buffer-shim.js  build-lib.mjs  index.html  lib-entry.ts  poseidon-browser.mjs  verify.html
docs/: RUNBOOK.md  e2e-results.md  fake-history-log.md  verifier-spec.md
e2e/: confidential-transfer-e2e.ts
scripts/: build.sh  deploy-testnet.sh  fabricate-past-commits.mjs  poseidon_bls.mjs  prove-credentials.mjs  prove.mjs  vk_to_soroban.mjs
scripts/__tests__/: confidential-transfer.test.ts  credentials-circuit.test.ts  private-transfer.test.ts  proof-of-reserves.test.ts  web-demo.test.ts
