# StellarHub ZK reference · https://stellarhub.io
[package]
name = "stellar-confidential-send-verifier"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.89.0"

# Soroban Groth16 (BLS12-381) verifier for the Confidential Send circuit.
# Forked from stellar/soroban-examples/groth16_verifier (Apache-2.0): the verify
# logic is the upstream generic verifier; data/ carries OUR circuit's VK + a sample
# proof, and src/test.rs proves the contract verifies our private_transfer proof.

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { version = "25.1.0" }

[dev-dependencies]
soroban-sdk = { version = "25.1.0", features = ["testutils"] }
ark-bls12-381 = { version = "0.4.0" }
ark-serialize = { version = "0.4.2" }
ark-ff = { version = "0.4.2" }
ark-ec = { version = "0.4.2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

# Standalone crate with its own workspace root (it carries a different dependency
# set — BLS12-381 ark crates + serde_json for the test harness). The empty
# [workspace] table below makes this crate an independent workspace.
[workspace]
