# StellarHub ZK reference · https://stellarhub.io
[package]
name = "stellar-zk-verified-payment"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.89.0"

# ZK-gated payment for Confidential Send. A payment executes only if a
# valid Groth16 (BLS12-381) proof verifies on-chain AND its nullifier is unused.
# The Groth16 verify logic is the same as the standalone groth16-verifier crate (the
# deployed verifier); it is embedded here so a verified payment is a
# single atomic tx (verify + nullifier + SAC transfer) with no cross-contract hop.

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { version = "25.1.0" }

[dev-dependencies]
soroban-sdk = { version = "25.1.0", features = ["testutils"] }
ark-bls12-381 = { version = "0.4.0" }
ark-serialize = { version = "0.4.2" }
ark-ff = { version = "0.4.2" }
ark-ec = { version = "0.4.2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

# Standalone crate — its own workspace root (a different dependency set from the
# sibling contracts). The empty [workspace] table below makes it independent.
[workspace]
